Thu Aug 18 22:25:59 UTC 2011  Trevor Fields  <fields_t@ociweb.com>

        Reverting Thu Aug 18 21:59:26 UTC 2011  Trevor Fields  <fields_t@ociweb.com>

Thu Aug 18 20:06:39 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tools/modeling/features/org.opendds.modeling.feature/feature.xml:
        * tools/modeling/features/org.opendds.modeling.site/site.xml:
        * tools/modeling/plugins/com.ociweb.emf.util/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/com.ociweb.gmf/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.common/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.common/about.properties:
        * tools/modeling/plugins/org.opendds.modeling.diagram.datalib/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.diagram.main/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.diagram.policylib/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.gmf/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DataLib.gmfgen:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DcpsLib.gmfgen:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/MainDiagram.gmfgen:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/PolicyLib.gmfgen:
        * tools/modeling/plugins/org.opendds.modeling.graphics/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.help/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.model.edit/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.model.editor/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.model/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.sdk.model.edit/META-INF/MANIFEST.MF: