@@ -1,8 +1,8 @@
-This is OpenDDS version 2.4, released Mon Jul 25 20:36:28 UTC 2011.
+This is OpenDDS version 3.0, released Fri Aug 19 13:47:18 UTC 2011.
 
 8<----------8<----------8<----------8<----------8<----------8<----------8<----
 
-    OpenDDS VERSION: 2.4
+    OpenDDS VERSION: 3.0
     TAO VERSION:
 
     HOST MACHINE and OPERATING SYSTEM:
