@@ -1,4 +1,4 @@
-This is OpenDDS version 2.4, released Mon Jul 25 20:36:28 UTC 2011.
+This is OpenDDS version 3.0, released Fri Aug 19 13:47:18 UTC 2011.
 
 This software is open source and free of licensing fees.  See the
 LICENSE file (in this directory) for license details.
