@@ -6,7 +6,7 @@
  * See: http://www.opendds.org/license.html
  */
 
-#define DDS_MAJOR_VERSION 2
-#define DDS_MINOR_VERSION 4
+#define DDS_MAJOR_VERSION 3
+#define DDS_MINOR_VERSION 0
 #define DDS_MICRO_VERSION 0
-#define DDS_VERSION "2.4"
+#define DDS_VERSION "3.0"
