@@ -1,3 +1,7 @@
+Fri Aug 19 13:47:18 UTC 2011  Adam Mitz  <mitza@ociweb.com>
+
+        * OpenDDS version 3.0 released.
+
 Thu Aug 18 22:25:59 UTC 2011  Trevor Fields  <fields_t@ociweb.com>
 
         Reverting Thu Aug 18 21:59:26 UTC 2011  Trevor Fields  <fields_t@ociweb.com>
